[project]
name = "tryoff-anyone"
description = "Node to tryoff clothes"
version = "1.0.1"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/RodrigoSKohl/comfyui-tryoff-anyone"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "rodrigoskohl"
DisplayName = "TryOff Anyone"
Icon = ""